fixed gap with dynamic time step

--- a/src/main.styl
+++ b/src/main.styl
@@ -16,12 +16,9 @@ body
 #app
   position relative
   overflow hidden
-  .now, .history
-    top 66%
   .now
     position absolute
     left 2rem
-    margin-top -0.5rem
     color orange
     font-size 1.4rem
     font-weight bold
@@ -39,8 +36,8 @@ body
       width 1000%
   .history
     position absolute
+    margin-top -1.5rem
     width 100%
-    margin-top -2rem
     .event
       position absolute
       left 16rem
